Chore: add token secret

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,5 +6,7 @@ spring.datasource.password=
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.hibernate.ddl-auto= none
 
+api.security.token.secret=blogApiSecretKeyNeedToChangeLater
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
