--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 #MySQL-Config
 spring.datasource.url=jdbc:mysql://localhost:3306/blog_db
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.hibernate.ddl-auto= none
